apps/paperless/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless
  namespace: paperless
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: paperless.pfeiffer.pw
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: paperless-web
                port:
                  number: 8000
